tests/baselines/reference/jsDeclarationsExportAssignedConstructorFunctionWithSub(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
jsDeclarationsExportAssignedConstructorFunctionWithSub.js(4,1): error TS9005: Declaration emit for this file requires using private name 'Sub'. An explicit type annotation may unblock declaration emit.
jsDeclarationsExportAssignedConstructorFunctionWithSub.js(4,1): error TS9005: Declaration emit for this file requires using private name 'exports'. An explicit type annotation may unblock declaration emit.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== jsDeclarationsExportAssignedConstructorFunctionWithSub.js (2 errors) ====
    /**
     * @param {number} p
     */
    module.exports = function (p) {
    ~~~~~~
!!! error TS9005: Declaration emit for this file requires using private name 'Sub'. An explicit type annotation may unblock declaration emit.
    ~~~~~~
!!! error TS9005: Declaration emit for this file requires using private name 'exports'. An explicit type annotation may unblock declaration emit.
        this.t = 12 + p;
    }
    module.exports.Sub = function() {
        this.instance = new module.exports(10);
    }
    module.exports.Sub.prototype = { }
    